add the origin link

--- a/logstash/conf.d/java_pipeline.conf
+++ b/logstash/conf.d/java_pipeline.conf
@@ -1,3 +1,4 @@
+# The idea is borrowed here - https://dzone.com/articles/using-multiple-grok-statements
 # Prerequisites:
 # 1. Current config was tested with Docker GELF log driver exclusively - https://docs.docker.com/config/containers/logging/gelf/
 #
